--- a/src/MultiAlignRogue/FeatureRefinement/FeatureRefinerView.xaml
+++ b/src/MultiAlignRogue/FeatureRefinement/FeatureRefinerView.xaml
@@ -4,15 +4,90 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MultiAlignRogue.FeatureRefinement"
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+             xmlns:clustering="clr-namespace:MultiAlignRogue.Clustering"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="500" d:DesignWidth="500">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
+            <RowDefinition Height="25*" />
+            <RowDefinition Height="50*" />
+            <RowDefinition Height="25*" />
             <RowDefinition Height="30" />
             <RowDefinition Height="30" />
         </Grid.RowDefinitions>
+        
+        <!-- XIC Creator -->
+        <GroupBox>
+            <GroupBox.Header>
+                <CheckBox FontWeight="Bold" Margin="5,0,5,0"
+                          IsChecked="{Binding ShouldCreateXics, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">Create Extracted Ion Chromatograms</CheckBox>
+            </GroupBox.Header>
+            <Grid IsEnabled="{Binding ShouldCreateXics}" Margin="5">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="50*" />
+                    <ColumnDefinition Width="25*" />
+                    <ColumnDefinition Width="5" />
+                    <ColumnDefinition Width="25*" />
+                </Grid.ColumnDefinitions>
+
+                <!-- Smoothing -->
+                <CheckBox Grid.Row="0" Grid.Column="0" VerticalAlignment="Center">Smoothing</CheckBox>
+                <TextBlock Margin="0,0,5,0" VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Row="0" Grid.Column="1">Polynomial:</TextBlock>
+                <xctk:IntegerUpDown Height="25" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Row="0" Grid.Column="1" />
+
+                <TextBlock Margin="0,0,5,0" VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Row="0" Grid.Column="3">Window Size:</TextBlock>
+                <xctk:IntegerUpDown Height="25" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Row="0" Grid.Column="3" />
+
+                <TextBlock Grid.Row="1" Grid.Column="0" Margin="18,0,0,0" VerticalAlignment="Center">Relative Intensity Threshold</TextBlock>
+                <xctk:DoubleUpDown Grid.Row="1" Grid.Column="1" Height="25" Minimum="0" Maximum="1" Increment="" />
+            </Grid>
+        </GroupBox>
+        
+        <!-- Second Pass Clustering -->
+        <GroupBox Grid.Row="1">
+            <GroupBox.Header>
+                <CheckBox FontWeight="Bold" Margin="5,0,5,0"
+                          IsChecked="{Binding ShouldCluster, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">Second Pass Clustering</CheckBox>
+            </GroupBox.Header>
+
+            <clustering:ClusteringAlgorithmSettings DataContext="{Binding ClusteringSettingsViewModel}" IsEnabled="{Binding ShouldCluster}" />
+        </GroupBox>
+        
+        <!-- Deisotoping Correction -->
+        <GroupBox Grid.Row="2">
+            <GroupBox.Header>
+                <CheckBox FontWeight="Bold" Margin="5,0,5,0"
+                          IsChecked="{Binding ShouldRunDeisotopingCorrection, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">Deisotoping Correction</CheckBox>
+            </GroupBox.Header>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+            </Grid>
+        </GroupBox>
+
+        <!-- Load Button -->
+        <Button Grid.Row="4"
+                Width="125"
+                Height="25"
+                HorizontalAlignment="Right"
+                Command="{Binding RunCommand}">
+            Load
+        </Button>
+
+        <!-- Restore Defaults Button -->
+        <Button Grid.Row="4" Height="25" Width="125"
+                Command="{Binding RestoreDefaultsCommand}"
+                HorizontalAlignment="Left">Restore Defaults</Button>
     </Grid>
 </UserControl>
