--- a/src/MultiAlignRogue/FeatureRefinement/FeatureRefinerView.xaml
+++ b/src/MultiAlignRogue/FeatureRefinement/FeatureRefinerView.xaml
@@ -4,21 +4,24 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MultiAlignRogue.FeatureRefinement"
+             d:DataContext="{d:DesignInstance d:Type=local:FeatureRefinementViewModel, IsDesignTimeCreatable=True}"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-             xmlns:clustering="clr-namespace:MultiAlignRogue.Clustering"
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="500">
+    <UserControl.Resources>
+        <BooleanToVisibilityConverter x:Key="BoolToVis" />
+    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="25*" />
-            <RowDefinition Height="50*" />
-            <RowDefinition Height="25*" />
+            <RowDefinition Height="30*" />
+            <RowDefinition Height="40*" />
+            <RowDefinition Height="30*" />
             <RowDefinition Height="30" />
             <RowDefinition Height="30" />
         </Grid.RowDefinitions>
         
         <!-- XIC Creator -->
-        <GroupBox>
+        <GroupBox IsEnabled="{Binding EnableXicCreation, UpdateSourceTrigger=PropertyChanged}">
             <GroupBox.Header>
                 <CheckBox FontWeight="Bold" Margin="5,0,5,0"
                           IsChecked="{Binding ShouldCreateXics, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">Create Extracted Ion Chromatograms</CheckBox>
@@ -35,46 +38,73 @@
                     <ColumnDefinition Width="25*" />
                 </Grid.ColumnDefinitions>
 
-                <!-- Smoothing -->
+                <!-- Smoothing Polynomial Order -->
                 <CheckBox Grid.Row="0" Grid.Column="0" VerticalAlignment="Center">Smoothing</CheckBox>
                 <TextBlock Margin="0,0,5,0" VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Row="0" Grid.Column="1">Polynomial:</TextBlock>
                 <xctk:IntegerUpDown Height="25" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Row="0" Grid.Column="1" />
 
+                <!-- Smoothing Window Size -->
                 <TextBlock Margin="0,0,5,0" VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Row="0" Grid.Column="3">Window Size:</TextBlock>
                 <xctk:IntegerUpDown Height="25" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Row="0" Grid.Column="3" />
 
+                <!-- Relative Intensity Threshold -->
                 <TextBlock Grid.Row="1" Grid.Column="0" Margin="18,0,0,0" VerticalAlignment="Center">Relative Intensity Threshold</TextBlock>
                 <xctk:DoubleUpDown Grid.Row="1" Grid.Column="1" Height="25" Minimum="0" Maximum="1" Increment="" />
             </Grid>
         </GroupBox>
         
-        <!-- Second Pass Clustering -->
+        <!-- Peak Finding -->
         <GroupBox Grid.Row="1">
             <GroupBox.Header>
-                <CheckBox FontWeight="Bold" Margin="5,0,5,0"
-                          IsChecked="{Binding ShouldCluster, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">Second Pass Clustering</CheckBox>
+                <CheckBox FontWeight="Bold" Margin="5,0,5,0">Peak Finding</CheckBox>
             </GroupBox.Header>
-
-            <clustering:ClusteringAlgorithmSettings DataContext="{Binding ClusteringSettingsViewModel}" IsEnabled="{Binding ShouldCluster}" />
         </GroupBox>
-        
+
         <!-- Deisotoping Correction -->
         <GroupBox Grid.Row="2">
             <GroupBox.Header>
                 <CheckBox FontWeight="Bold" Margin="5,0,5,0"
                           IsChecked="{Binding ShouldRunDeisotopingCorrection, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">Deisotoping Correction</CheckBox>
             </GroupBox.Header>
-            <Grid>
+            <Grid Margin="5">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
+                    <RowDefinition Height="20" />
+                    <RowDefinition Height="25" />
+                    <RowDefinition Height="10" />
+                    <RowDefinition Height="20" />
+                    <RowDefinition Height="25" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="5" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
+
+                <!-- Isotopic Tolerance -->
+                <TextBlock Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center">Isotopic Tolerance</TextBlock>
+                <xctk:DoubleUpDown Grid.Row="1" Grid.Column="0"
+                                   Value="{Binding DeisotopingCorrectorViewModel.MassTolerance}"/>
+                
+                <!-- NET tolerance -->
+                <TextBlock Grid.Row="0" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center">NET Tolerance</TextBlock>
+                <xctk:DoubleUpDown Grid.Row="1" Grid.Column="2" Minimum="0" Maximum="1" Increment="0.1" Value="{Binding DeisotopingCorrectorViewModel.NetTolerance}" />
+
+                <!-- # of Isotopes -->
+                <TextBlock Grid.Row="3" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center">Number of Isotopes</TextBlock>
+                <xctk:IntegerUpDown Grid.Row="4" Grid.Column="0" Minimum="0"
+                                    Value="{Binding DeisotopingCorrectorViewModel.NumberOfIsotopes}" />
+
+                <!-- Separate By Charge -->
+                <CheckBox Grid.Row="4" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center">Separate By Charge</CheckBox>
             </Grid>
         </GroupBox>
+        
+        <!-- Progress Bar -->
+        <ProgressBar Grid.Row="3"
+                     Height="25"
+                     Visibility="{Binding ShouldShowProgress, Converter={StaticResource BoolToVis}}"
+                     Value="{Binding LoadingProgress}" />
 
         <!-- Load Button -->
         <Button Grid.Row="4"
