Allow user to open up different types of local mass tag databases or text files

--- a/src/MultiAlignRogue/AMTMatching/StacSettingsView.xaml
+++ b/src/MultiAlignRogue/AMTMatching/StacSettingsView.xaml
@@ -68,7 +68,8 @@
                         Grid.Column="2"
                         Width="33"
                         HorizontalAlignment="Right"
-                        Command="{Binding DatabaseSelectionViewModel.SelectTextFileCommand}" />
+                        Command="{Binding DatabaseSelectionViewModel.SelectLocalFileCommand}"
+                        Content="File" />
 
                 <ProgressBar Name="AmtTagDatabaseProgressBar"
                              Grid.Row="1"
