--- a/src/MultiAlignRogue/Feature Finding/FeatureFindingSettings.xaml
+++ b/src/MultiAlignRogue/Feature Finding/FeatureFindingSettings.xaml
@@ -392,7 +392,7 @@
                      Height="25"
                      Visibility="{Binding ShouldShowProgress,
                                           Converter={StaticResource BoolToVis}}"
-                     Value="{Binding TotalProgress}" />
+                     Value="{Binding TotalProgress, Mode=OneWay}" />
 
         <Button Grid.Row="2"
                 Width="125"
