--- a/src/Applications/MultiAlign/Windows/IO/ClusterExportView.xaml
+++ b/src/Applications/MultiAlign/Windows/IO/ClusterExportView.xaml
@@ -1,9 +1,11 @@
-﻿<Window x:Class="MultiAlign.Windows.IO.ClusterExportView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:general="clr-namespace:MultiAlign.Windows.IO"
+﻿<Window xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        Height="600"
         Icon="/MultiAlign;component/Resources/logo.png"
-        Title="Cluster Data Export" Height="600" Width="800">
+        Title="Cluster Data Export"
+        Width="800"
+        x:Class="MultiAlign.Windows.IO.ClusterExportView"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:general="clr-namespace:MultiAlign.Windows.IO">
 
     <Window.Resources>
         <DataTemplate x:Key="ExportFormatTemplate">
@@ -17,11 +19,11 @@
             <RowDefinition Height="80" />
         </Grid.RowDefinitions>
 
-        <GroupBox Header="Cluster Data"
-                  FontSize="24"
-                  Margin="5"
+        <GroupBox FontSize="24"
+                  Foreground="LightGray"
                   Grid.Row="0"
-                  Foreground="LightGray">
+                  Header="Cluster Data"
+                  Margin="5">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
@@ -36,81 +38,78 @@
                     <ColumnDefinition Width="40*" />
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
-                <CheckBox
-                    Foreground="Gray"
-                    FontSize="18"
-                    Grid.Row="1"
-                    IsChecked="{Binding IsFilteredClusters}"
-                    Content="Filtered Clusters Only"
-                    Margin="5" />
-                <Label
-                    Grid.Row="0"
-                    Foreground="Gray"
-                    FontSize="18"
-                    Content="Output Format"
-                    Margin="5" />
-                <ComboBox
-                    Grid.Row="0"
-                    Grid.Column="1"
-                    Margin="5"
-                    Width="300"
-                    HorizontalContentAlignment="Stretch"
-                    ItemTemplate="{StaticResource ResourceKey=ExportFormatTemplate}"
-                    ItemsSource="{Binding Exporters}"
-                    SelectedItem="{Binding SelectedExporter, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, NotifyOnSourceUpdated=True}"
-                    HorizontalAlignment="Left"
-                    FontSize="18" />
-                <Label
-                    Grid.Row="3"
-                    Foreground="Gray"
-                    FontSize="18"
-                    Content="File name"
-                    Margin="5" />
-                <TextBox
-                    Grid.Row="4"
-                    Grid.Column="0"
-                    FontSize="18"
-                    Grid.ColumnSpan="2"
-                    Margin="5"
-                    Text="{Binding Path=OutputPath, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}" />
-                <Button
-                    Grid.Row="4"
-                    Grid.Column="2"
-                    FontSize="18"
-                    Content="Browse"
-                    Margin="5"
-                    Width="164"
-                    Height="32"
-                    Command="{Binding BrowseSave}"
-                    Style="{DynamicResource SimpleBrowseButtonStyle}" />
-                <Button
-                    Grid.Row="5"
-                    Grid.Column="2"
-                    FontSize="18"
-                    Content="Save"
-                    Margin="5"
-                    Width="164"
-                    Height="32"
-                    CommandParameter="{Binding OutputPath}"
-                    Command="{Binding SaveData}"
-                    Style="{DynamicResource SimpleButtonStyle}" />
+                <Label Content="Output Format"
+                       FontSize="18"
+                       Foreground="Gray"
+                       Grid.Row="0"
+                       Margin="5" />
+                <ComboBox Grid.Column="1"
+                          HorizontalContentAlignment="Stretch"
+                          FontSize="18"
+                          Grid.Row="0"
+                          HorizontalAlignment="Left"
+                          ItemTemplate="{StaticResource ResourceKey=ExportFormatTemplate}"
+                          ItemsSource="{Binding Exporters}"
+                          Margin="5"
+                          SelectedItem="{Binding SelectedExporter,
+                                                 Mode=TwoWay,
+                                                 UpdateSourceTrigger=PropertyChanged,
+                                                 NotifyOnSourceUpdated=True}"
+                          Width="300" />
+                <CheckBox Content="Filtered Clusters Only"
+                          FontSize="18"
+                          Foreground="Gray"
+                          Grid.Row="1"
+                          IsChecked="{Binding IsFilteredClusters}"
+                          Margin="5" />
+                <Label Content="File name"
+                       FontSize="18"
+                       Foreground="Gray"
+                       Grid.Row="3"
+                       Margin="5" />
+                <TextBox Grid.Column="0"
+                         Grid.ColumnSpan="2"
+                         FontSize="18"
+                         Grid.Row="4"
+                         Margin="5"
+                         Text="{Binding Path=OutputPath,
+                                        Mode=TwoWay,
+                                        NotifyOnSourceUpdated=True,
+                                        UpdateSourceTrigger=PropertyChanged}" />
+                <Button Grid.Column="2"
+                        Height="32"
+                        Command="{Binding BrowseSave}"
+                        Content="Browse"
+                        FontSize="18"
+                        Grid.Row="4"
+                        Margin="5"
+                        Style="{DynamicResource SimpleBrowseButtonStyle}"
+                        Width="164" />
+                <Button Grid.Column="2"
+                        Height="32"
+                        Command="{Binding SaveData}"
+                        CommandParameter="{Binding OutputPath}"
+                        Content="Save"
+                        FontSize="18"
+                        Grid.Row="5"
+                        Margin="5"
+                        Style="{DynamicResource SimpleButtonStyle}"
+                        Width="164" />
             </Grid>
         </GroupBox>
-        <Label
-            Grid.Row="3"
-            Foreground="Gray"
-            FontSize="18"
-            Content="{Binding Status}"
-            Margin="5" />
-        <Button
-            HorizontalAlignment="Right"
-            VerticalAlignment="Center"
-            Grid.Row="1"
-            Width="164"
-            Height="32"
-            Content="Close"
-            Margin="20,20,20,20"
-            IsCancel="True"
-            Style="{DynamicResource SimpleButtonStyle}" />
+        <Button Height="32"
+                VerticalAlignment="Center"
+                Content="Close"
+                Grid.Row="1"
+                HorizontalAlignment="Right"
+                IsCancel="True"
+                Margin="20,20,20,20"
+                Style="{DynamicResource SimpleButtonStyle}"
+                Width="164" />
+        <Label Content="{Binding Status}"
+               FontSize="18"
+               Foreground="Gray"
+               Grid.Row="3"
+               Margin="5" />
     </Grid>
 </Window>
