--- a/src/Applications/MultiAlign/Windows/Plots/AlignmentPlotView.xaml
+++ b/src/Applications/MultiAlign/Windows/Plots/AlignmentPlotView.xaml
@@ -1,10 +1,11 @@
-﻿<UserControl x:Class="MultiAlign.Windows.Plots.AlignmentPlotView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+﻿<UserControl xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              mc:Ignorable="d"
-             d:DesignHeight="600" d:DesignWidth="1200">
+             d:DesignHeight="600"
+             d:DesignWidth="1200"
+             x:Class="MultiAlign.Windows.Plots.AlignmentPlotView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -21,148 +22,131 @@
             <ColumnDefinition Width="256" />
             <ColumnDefinition Width="256" />
         </Grid.ColumnDefinitions>
-        <Label
-            FontSize="14pt"
-            Height="24pt"
-            HorizontalContentAlignment="Left"
-            Grid.ColumnSpan="7"
-            Grid.Row="0">
+        <Label Grid.ColumnSpan="7"
+               Height="24pt"
+               HorizontalContentAlignment="Left"
+               FontSize="14pt"
+               Grid.Row="0">
             <Binding Path="PlotName" />
         </Label>
 
-        <Label
-            Grid.Row="1"
-            Grid.Column="0"
-            HorizontalContentAlignment="Center"
-            Height="24">
+        <Label Grid.Column="0"
+               Height="24"
+               HorizontalContentAlignment="Center"
+               Grid.Row="1">
             Features
         </Label>
-        <Border
-            Grid.Row="2"
-            Grid.Column="0"
-            Padding="2"
-            Margin="5"
-            BorderBrush="LightGray"
-            BorderThickness="4"
-            Background="White"
-            CornerRadius="3">
-            <Image Source="{Binding Path=FeaturePlotImage}" />
-        </Border>
 
-        <Label
-            Grid.Row="1"
-            Grid.Column="1"
-            HorizontalContentAlignment="Center"
-            Height="24">
+        <Label Grid.Column="1"
+               Height="24"
+               HorizontalContentAlignment="Center"
+               Grid.Row="1">
             Alignment Heatmap
         </Label>
-        <Border
-            Grid.Row="2"
-            Grid.Column="1"
-            Padding="2"
-            Margin="5"
-            BorderBrush="LightGray"
-            BorderThickness="4"
-            Background="White"
-            CornerRadius="3">
-            <Image Source="{Binding Path=HeatmapImage}" />
-        </Border>
 
-        <Label
-            Grid.Row="1"
-            Grid.Column="3"
-            HorizontalContentAlignment="Center"
-            Height="24">
-            NET Errors
-        </Label>
-        <Border
-            Grid.Row="2"
-            Grid.Column="3"
-            Padding="2"
-                        Margin="5"
-                        BorderBrush="LightGray"
-                        BorderThickness="4"
-                        Background="White"
-                        CornerRadius="3">
-            <Image Source="{Binding Path=NetHistogram}" />
-        </Border>
-
-        <Label
-            Grid.Row="3"
-            Grid.Column="0"
-            HorizontalContentAlignment="Center"
-            Height="24">
-            NET Residuals
-        </Label>
-        <Border
-
-                Grid.Row="4"
-                Grid.Column="0"
-                Padding="2"
-                Margin="5"
-                BorderBrush="LightGray"
-                BorderThickness="4"
-                Background="White"
-                CornerRadius="3">
-            <Image Source="{Binding Path=NetScanImage}" />
-        </Border>
-
-        <Label
-            Grid.Row="1"
-            Grid.Column="2"
-            HorizontalContentAlignment="Center"
-            Height="24">
+        <Label Grid.Column="2"
+               Height="24"
+               HorizontalContentAlignment="Center"
+               Grid.Row="1">
             Mass Errors
         </Label>
-        <Border
-            Grid.Row="2"
-            Grid.Column="2"
-            Padding="2"
-                        Margin="5"
-                        BorderBrush="LightGray"
-                        BorderThickness="4"
-                        Background="White"
-                        CornerRadius="3">
+
+        <Label Grid.Column="3"
+               Height="24"
+               HorizontalContentAlignment="Center"
+               Grid.Row="1">
+            NET Errors
+        </Label>
+        <Border Grid.Column="0"
+                Background="White"
+                BorderBrush="LightGray"
+                BorderThickness="4"
+                CornerRadius="3"
+                Grid.Row="2"
+                Margin="5"
+                Padding="2">
+            <Image Source="{Binding Path=FeaturePlotImage}" />
+        </Border>
+        <Border Grid.Column="1"
+                Background="White"
+                BorderBrush="LightGray"
+                BorderThickness="4"
+                CornerRadius="3"
+                Grid.Row="2"
+                Margin="5"
+                Padding="2">
+            <Image Source="{Binding Path=HeatmapImage}" />
+        </Border>
+        <Border Grid.Column="2"
+                Background="White"
+                BorderBrush="LightGray"
+                BorderThickness="4"
+                CornerRadius="3"
+                Grid.Row="2"
+                Margin="5"
+                Padding="2">
             <Image Source="{Binding Path=MassHistogram}" />
 
         </Border>
-        <Label
-            Grid.Row="3"
-            Grid.Column="2"
-            HorizontalContentAlignment="Center"
-            Height="24">
-            Mass Error (ppm) vs. Scan
-        </Label>
-        <Border
-                Grid.Row="4"
-                Grid.Column="2"
-                Padding="2"
-                Margin="5"
+        <Border Grid.Column="3"
+                Background="White"
                 BorderBrush="LightGray"
                 BorderThickness="4"
-                Background="White"
-                CornerRadius="3">
-            <Image Source="{Binding Path=MassScanImage}" />
+                CornerRadius="3"
+                Grid.Row="2"
+                Margin="5"
+                Padding="2">
+            <Image Source="{Binding Path=NetHistogram}" />
         </Border>
 
-        <Label
+        <Label Grid.Column="0"
+               Height="24"
+               HorizontalContentAlignment="Center"
+               Grid.Row="3">
+            NET Residuals
+        </Label>
 
-            Grid.Row="3"
-            Grid.Column="1"
-            HorizontalContentAlignment="Center"
-            Height="24">
+        <Label Grid.Column="1"
+               Height="24"
+               HorizontalContentAlignment="Center"
+               Grid.Row="3">
             Mass Error (ppm) vs. m/z
         </Label>
-        <Border
-            Grid.Row="4"
-            Grid.Column="1"
-            Padding="2"
-                    Margin="5"
-                    Background="White"
-                    BorderBrush="LightGray"
-                    BorderThickness="4"
-                    CornerRadius="3">
+        <Label Grid.Column="2"
+               Height="24"
+               HorizontalContentAlignment="Center"
+               Grid.Row="3">
+            Mass Error (ppm) vs. Scan
+        </Label>
+        <Border Grid.Column="0"
+                Background="White"
+                BorderBrush="LightGray"
+                BorderThickness="4"
+                CornerRadius="3"
+                Grid.Row="4"
+                Margin="5"
+                Padding="2">
+            <Image Source="{Binding Path=NetScanImage}" />
+        </Border>
+        <Border Grid.Column="1"
+                Background="White"
+                BorderBrush="LightGray"
+                BorderThickness="4"
+                CornerRadius="3"
+                Grid.Row="4"
+                Margin="5"
+                Padding="2">
             <Image Source="{Binding Path=MassMzImage}" />
+        </Border>
+        <Border Grid.Column="2"
+                Background="White"
+                BorderBrush="LightGray"
+                BorderThickness="4"
+                CornerRadius="3"
+                Grid.Row="4"
+                Margin="5"
+                Padding="2">
+            <Image Source="{Binding Path=MassScanImage}" />
         </Border>
     </Grid>
 </UserControl>
